--- a/pages/menu.css
+++ b/pages/menu.css
@@ -96,11 +96,67 @@ nav .srch {
     display: flex;
     width: 100vw;
     height: 599px;
-    background: tomato;
+    background: transparent;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
     justify-items: center;
+
+    .menu2{
+      width: 400px;
+      height: 400px;
+      background: transparent;
+      margin: 5px;
+      display: block;
+      gap: 25px;
+      border-radius: 10px;
+
+      .part1{
+        width: 100%;
+        height: 50%;
+        border: none;
+        background: #e0e0e0;
+        border-radius: 10px;
+        display: flex;
+        margin: 5px;
+
+        .img{
+          width: 50%;
+          height: 100%;
+          img{
+            width: 100%;
+            height: 100%;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+          }
+        }
+
+        .dtl{
+          width: 50%;
+          height: 100%;
+          display: block;
+          color: #000;
+          font-family: "Inter", sans-serif;
+          padding: 10px;
+          gap: 20px;
+
+          h2{
+            font-family: "Inter", sans-serif;
+            display: flex;
+            font-size: 18px;
+          }
+          span{
+            display: flex;
+            color: #615959;
+            font-weight: 400;
+            font-size: 13px;
+            margin-top: 20px;
+            margin: 5px 0;
+            gap: 10px;
+          }
+        }
+      }
+    }
 
     .menu{
       width: 250px;
@@ -142,6 +198,12 @@ nav .srch {
     }
 }
 
+p{
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+}
 
 
 footer{
