--- a/pages/gallerry.css
+++ b/pages/gallerry.css
@@ -91,3 +91,30 @@ nav .srch {
     cursor: pointer;
   }
 }
+
+.main{
+    display: flex;
+    width: 100vw;
+    height: 96vh;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+
+    .img{
+        width: 250px;
+        height: 400px;
+        background: #e0e0e0;
+        margin: 10px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    }
+}
+
+p{
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    text-align: center;
+    bottom: 0;
+}
