--- a/pages/order.css
+++ b/pages/order.css
@@ -91,3 +91,22 @@ nav .srch {
     cursor: pointer;
   }
 }
+
+form {
+    width: 95vw;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    display: block;
+
+    input{
+        width: 50%;
+        height: 60px;
+        display: flex;
+        margin: 10px;
+        padding: 20px;
+    }
+}
