--- a/pages/blog.css
+++ b/pages/blog.css
@@ -92,6 +92,16 @@ nav .srch {
   }
 }
 
+.main{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
+
 
 @media (max-width: 720px) {
   body{
